# uvproject

packaged-app/: README.md  pyproject.toml
packaged-app/src/packaged_app/: fun2.py
simple-app/: README.md  pyproject.toml
simple-app/src/simple_app/: hello.py
